# weather_bandit

./: .env  Cargo.toml  readme.md
.github/workflows/: github_greeting.yml  host_system_builder.yml  linux_host_users.yml  macos_host_users.yml
src/: lib.rs  main.rs  weather_types.rs
src/data/: mod.rs
src/uri/: mod.rs
tests/: test_cases.rs
