[package]
name = "weather-bandit"
version = "0.1.0"
authors = ["Michael <michaelbrockus@gmail.com>"]
edition = "2018"
readme = "readme.md"
license = "Apache-2.0"
repository = "https://github.com/michaelbrockus/weather-bandit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weather-bandit"
path = "src/main.rs"

[lib]
name = "program"
path = "src/lib.rs"

[dependencies]
hyper = "^0.10.5"
url = "^1.4.0"
serde = "0.9.11"
serde_json = "0.9.9"
serde_derive = "0.9.11"
