[package]
name = "weather-bandit"
version = "0.1.0"
authors = ["Michael <michaelbrockus@gmail.com>"]
edition = "2018"
readme = "readme.md"
license = "Apache-2.0"
repository = "https://github.com/michaelbrockus/weather-bandit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weather-bandit"
path = "src/main.rs"

[lib]
name = "program"
path = "src/lib.rs"

[dependencies]
openweather-async = "0.1.2"
tokio = { version="0.2.22", features = ["macros", "tcp", "dns", "io-util"]}
dotenv = "0.15.0"
