[package]
authors = ["Michael <michaelbrockus@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
name = "weather-bandit"
readme = "readme.md"
repository = "https://github.com/michaelbrockus/weather-bandit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weather-bandit"
path = "src/main.rs"

[lib]
name = "weather_bandit"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
openweather-async = "0.1.2"
tokio = {version = "0.2.22", features = ["macros", "tcp", "dns", "io-util"]}
